<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SampleActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/signLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        >


        <RelativeLayout
            android:id="@+id/txt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:id="@+id/order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_scan_text_static"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_scan_text"
                    android:padding="10dp"
                    android:gravity="top"
                    android:textStyle="bold"
                    android:background="@color/offWhite"
                    android:layout_alignParentLeft="true"
                    />

                <TextView
                    android:id="@+id/txt_scan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="top"
                    android:textStyle="bold"
                    android:background="@color/offWhite"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/txt_scan_text_static"
                    />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_add_scan_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:tint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_camera"
                    />

            </RelativeLayout>



        </RelativeLayout>


        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/view1"
            android:text="@string/btn_clear"
            android:background="@color/colorPrimaryDark"/>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/view1"
            android:text="@string/btn_save"
            android:background="@color/colorPrimaryDark" />

    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/content_frame_layout"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/btn_retake"
            />


        <Button
            android:id="@+id/btn_retake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/view2"
            android:text="@string/btn_retake"
            android:background="@color/offWhite"/>

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/view2"
            android:text="@string/btn_close"
            android:background="@color/offWhite" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>